gh-pages for e5baaa5

--- a/_static/license.html
+++ b/_static/license.html
@@ -29,8 +29,7 @@
     <script type="text/javascript" src="http://cdn.mathjax.org/mathjax/latest/MathJax.js?config=TeX-AMS-MML_HTMLorMML"></script>
     <script type="text/javascript" src="theme_extras.js"></script>
     <link rel="top" title="vimrc 0.1 documentation" href="../index.html" />
-    <link rel="next" title="&lt;no title&gt;" href="keys.html" />
-    <link rel="prev" title="&lt;no title&gt;" href="settings.html" /> 
+    <link rel="prev" title="&lt;no title&gt;" href="keys.html" /> 
   </head>
   <body>
       <div class="header"><h1 class="heading"><a href="../index.html">
@@ -40,11 +39,9 @@
       <div class="topnav">
       
         <p>
-        «&#160;&#160;<a href="settings.html">&lt;no title&gt;</a>
+        «&#160;&#160;<a href="keys.html">&lt;no title&gt;</a>
         &#160;&#160;::&#160;&#160;
         <a class="uplink" href="../index.html">Contents</a>
-        &#160;&#160;::&#160;&#160;
-        <a href="keys.html">&lt;no title&gt;</a>&#160;&#160;»
         </p>
 
       </div>
@@ -57,11 +54,9 @@
       <div class="bottomnav">
       
         <p>
-        «&#160;&#160;<a href="settings.html">&lt;no title&gt;</a>
+        «&#160;&#160;<a href="keys.html">&lt;no title&gt;</a>
         &#160;&#160;::&#160;&#160;
         <a class="uplink" href="../index.html">Contents</a>
-        &#160;&#160;::&#160;&#160;
-        <a href="keys.html">&lt;no title&gt;</a>&#160;&#160;»
         </p>
 
       </div>
