--- a/_static/keys.html
+++ b/_static/keys.html
@@ -29,6 +29,7 @@
     <script type="text/javascript" src="http://cdn.mathjax.org/mathjax/latest/MathJax.js?config=TeX-AMS-MML_HTMLorMML"></script>
     <script type="text/javascript" src="theme_extras.js"></script>
     <link rel="top" title="vimrc 0.1 documentation" href="../index.html" />
+    <link rel="next" title="&lt;no title&gt;" href="license.html" />
     <link rel="prev" title="&lt;no title&gt;" href="plugins.html" /> 
   </head>
   <body>
@@ -42,6 +43,8 @@
         «&#160;&#160;<a href="plugins.html">&lt;no title&gt;</a>
         &#160;&#160;::&#160;&#160;
         <a class="uplink" href="../index.html">Contents</a>
+        &#160;&#160;::&#160;&#160;
+        <a href="license.html">&lt;no title&gt;</a>&#160;&#160;»
         </p>
 
       </div>
@@ -57,12 +60,14 @@
         «&#160;&#160;<a href="plugins.html">&lt;no title&gt;</a>
         &#160;&#160;::&#160;&#160;
         <a class="uplink" href="../index.html">Contents</a>
+        &#160;&#160;::&#160;&#160;
+        <a href="license.html">&lt;no title&gt;</a>&#160;&#160;»
         </p>
 
       </div>
 
     <div class="footer">
-        &copy; Copyright 2013 Uncertain.
+        &copy; Copyright 2013 Journeyer J. Joh.
       Created using <a href="http://sphinx.pocoo.org/">Sphinx</a> 1.1.3.
     </div>
   </body>
