--- a/search.html
+++ b/search.html
@@ -85,7 +85,7 @@
       </div>
 
     <div class="footer">
-        &copy; Copyright 2013 Uncertain.
+        &copy; Copyright 2013 Journeyer J. Joh.
       Created using <a href="http://sphinx.pocoo.org/">Sphinx</a> 1.1.3.
     </div>
   </body>
