gh-pages for 8b01712

--- a/_static/windows.html
+++ b/_static/windows.html
@@ -30,7 +30,7 @@
     <script type="text/javascript" src="theme_extras.js"></script>
     <link rel="top" title="vimrc 0.1 documentation" href="../index.html" />
     <link rel="next" title="&lt;no title&gt;" href="settings.html" />
-    <link rel="prev" title="Installing" href="installing.html" /> 
+    <link rel="prev" title="Install Guide" href="installing.html" /> 
   </head>
   <body>
       <div class="header"><h1 class="heading"><a href="../index.html">
@@ -40,7 +40,7 @@
       <div class="topnav">
       
         <p>
-        «&#160;&#160;<a href="installing.html">Installing</a>
+        «&#160;&#160;<a href="installing.html">Install Guide</a>
         &#160;&#160;::&#160;&#160;
         <a class="uplink" href="../index.html">Contents</a>
         &#160;&#160;::&#160;&#160;
@@ -57,7 +57,7 @@
       <div class="bottomnav">
       
         <p>
-        «&#160;&#160;<a href="installing.html">Installing</a>
+        «&#160;&#160;<a href="installing.html">Install Guide</a>
         &#160;&#160;::&#160;&#160;
         <a class="uplink" href="../index.html">Contents</a>
         &#160;&#160;::&#160;&#160;
