gh-pages for 78beba0

--- a/_static/installing.html
+++ b/_static/installing.html
@@ -29,7 +29,7 @@
     <script type="text/javascript" src="http://cdn.mathjax.org/mathjax/latest/MathJax.js?config=TeX-AMS-MML_HTMLorMML"></script>
     <script type="text/javascript" src="theme_extras.js"></script>
     <link rel="top" title="vimrc 0.1 documentation" href="../index.html" />
-    <link rel="next" title="&lt;no title&gt;" href="windows.html" />
+    <link rel="next" title="Windows" href="windows.html" />
     <link rel="prev" title="Welcome to vimrc’s documentation!" href="../index.html" /> 
   </head>
   <body>
@@ -44,7 +44,7 @@
         &#160;&#160;::&#160;&#160;
         <a class="uplink" href="../index.html">Contents</a>
         &#160;&#160;::&#160;&#160;
-        <a href="windows.html">&lt;no title&gt;</a>&#160;&#160;»
+        <a href="windows.html">Windows</a>&#160;&#160;»
         </p>
 
       </div>
@@ -133,7 +133,7 @@ $ sudo chown -h `whoami`:`whoami` rmtags.sh</pre>
         &#160;&#160;::&#160;&#160;
         <a class="uplink" href="../index.html">Contents</a>
         &#160;&#160;::&#160;&#160;
-        <a href="windows.html">&lt;no title&gt;</a>&#160;&#160;»
+        <a href="windows.html">Windows</a>&#160;&#160;»
         </p>
 
       </div>
