--- a/installing.html
+++ b/installing.html
@@ -68,17 +68,17 @@ $ ./install.sh</pre>
 <ol class="arabic simple" start="2">
 <li>You must provide sudo password for doing this DURING the install.
 But DO NOT INVOKE this script under sudo command your self.
-Just run it WITHOUT sudo and provide sudo password <strong>when you are asked</strong>.</li>
+Just run it WITHOUT sudo and provide sudo password <strong>when you are asked</strong>.:</li>
 </ol>
-<div class="highlight-python"><pre>provide sudo password only when you are asked</pre>
-</div>
+<blockquote>
+<div>provide sudo password only when you are asked</div></blockquote>
 <ol class="arabic simple" start="3">
 <li>And after the script finished it&#8217;s job, you Open vim and :BundleInstall
-your self.</li>
+your self.:</li>
 </ol>
-<div class="highlight-python"><pre>$ vim
-$ :BundleInstall</pre>
-</div>
+<blockquote>
+<div>$ vim
+$ :BundleInstall</div></blockquote>
 <p>If you want to install manually follow instructions below.</p>
 <ul class="simple">
 <li>Install .vimrc by manual</li>
