gh-pages for 06e84c3

--- a/installing.html
+++ b/installing.html
@@ -68,13 +68,13 @@ $ ./install.sh</pre>
 <ol class="arabic simple" start="2">
 <li>You must provide sudo password for doing this DURING the install.
 But DO NOT INVOKE this script under sudo command your self.
-Just run it WITHOUT sudo and provide sudo password <strong>when you are asked</strong>.:</li>
+Just run it WITHOUT sudo and provide sudo password <strong>when you are asked</strong>.</li>
 </ol>
 <blockquote>
 <div>provide sudo password only when you are asked</div></blockquote>
 <ol class="arabic simple" start="3">
 <li>And after the script finished it&#8217;s job, you Open vim and :BundleInstall
-your self.:</li>
+your self.</li>
 </ol>
 <blockquote>
 <div>$ vim
