gh-pages for 1609a39

--- a/installing.html
+++ b/installing.html
@@ -65,20 +65,20 @@
 <div class="highlight-python"><pre>$ cd vimrc
 $ ./install.sh</pre>
 </div>
-<ol class="arabic simple" start="2">
-<li>You must provide sudo password for doing this DURING the install.
+<ol class="arabic" start="2">
+<li><p class="first">You must provide sudo password for doing this DURING the install.
 But DO NOT INVOKE this script under sudo command your self.
-Just run it WITHOUT sudo and provide sudo password <strong>when you are asked</strong>.</li>
+Just run it WITHOUT sudo and provide sudo password <strong>when you are asked</strong>.</p>
+<div class="highlight-python"><pre>provide sudo password only when you are asked</pre>
+</div>
+</li>
+<li><p class="first">And after the script finished it&#8217;s job, you Open vim and :BundleInstall
+your self.</p>
+<div class="highlight-python"><pre>$ vim
+$ :BundleInstall</pre>
+</div>
+</li>
 </ol>
-<blockquote>
-<div>provide sudo password only when you are asked</div></blockquote>
-<ol class="arabic simple" start="3">
-<li>And after the script finished it&#8217;s job, you Open vim and :BundleInstall
-your self.</li>
-</ol>
-<blockquote>
-<div>$ vim
-$ :BundleInstall</div></blockquote>
 <p>If you want to install manually follow instructions below.</p>
 <ul class="simple">
 <li>Install .vimrc by manual</li>
