--- a/installing.html
+++ b/installing.html
@@ -65,20 +65,16 @@
 <div class="highlight-python"><pre>$ cd vimrc
 $ ./install.sh</pre>
 </div>
-<ol class="arabic" start="2">
-<li><p class="first">You must provide sudo password for doing this DURING the install.
+<p>2. You must provide sudo password for doing this DURING the install.
 But DO NOT INVOKE this script under sudo command your self.
 Just run it WITHOUT sudo and provide sudo password <strong>when you are asked</strong>.</p>
 <div class="highlight-python"><pre>provide sudo password only when you are asked</pre>
 </div>
-</li>
-<li><p class="first">And after the script finished it&#8217;s job, you Open vim and :BundleInstall
+<p>3. And after the script finished it&#8217;s job, you Open vim and :BundleInstall
 your self.</p>
 <div class="highlight-python"><pre>$ vim
 $ :BundleInstall</pre>
 </div>
-</li>
-</ol>
 <p>If you want to install manually follow instructions below.</p>
 <ul class="simple">
 <li>Install .vimrc by manual</li>
